--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation project(path: ':custommessage')
+    api project(path: ':custommessage')
     // qiniu
-    implementation project(path: ':qiniu_sdk')
+    api project(path: ':qiniu_sdk')
 }
